# djutils-core

./: .gitignore  pyproject.toml
.github/workflows/: pypi-release.yml
